src/k8s/comax-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sandbox1
  name: comax-processor
  labels:
    app: comax-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comax-processor
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: comax-processor
    spec:
      containers:
        - name: comax-processor
          image: spanahifar/comax-processor:v2
          resources:
            requests:
              cpu: 1m
              memory: 128Mi
            limits:
              cpu: 1m
              memory: 128Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 80
