src/k8s/ledger-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sandbox1
  name: ledger-api
  labels:
    app: ledger-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ledger-api
    spec:
      containers:
        - name: ledger-api
          image: spanahifar/ledger-api
          resources:
            requests:
              cpu: 500m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 128Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 80
