src/k8s/comax-processor.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comax-processor
spec:
  selector:
    app: comax-processor
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
