src/k8s/ledger-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-api
spec:
  selector:
    app: ledger-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
