src/k8s/sawtooth.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sawtooth-0
  namespace: sandbox1
spec:
  ports:
    - name: apiport
      port: 80
      protocol: TCP
      targetPort: 8008
    - name: validator
      port: 4004
      protocol: TCP
      targetPort: 4004
  selector:
    name: sawtooth-1
